--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,14 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.4.0</version>
+        <configuration>
+          <mainClass>org.phoneticsearch.application.MainApplication</mainClass>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
   <properties>
